--- a/l18stepformverification/index.html
+++ b/l18stepformverification/index.html
@@ -42,11 +42,13 @@
 			</div>
 
 			<div class="d-flex">
-				<button type="button" id="prevbtn" class="btn">Previous</button>
-				<button type="button" id="nextbtn" class="btn">Next</button>
+				<button type="button" id="prevbtn" class="btn" onclick="gonow(-1)">Previous</button>
+				<button type="button" id="nextbtn" class="btn" onclick="gonow(1)">Next</button>
 			</div>
 
 		</form>
+
+		<div id="result-container">abcd</div>
 
 	</div>
 
