--- a/l19stopwatch/index.html
+++ b/l19stopwatch/index.html
@@ -9,8 +9,10 @@
 
 	<div class="container">
 		<h2><i class="fas fa-stopwatch"></i>Stop Watch</h2>
+		<button type="button" class="btn mode-btn"><i class="fas fa-tools"></i></button>
 
 		<div class="display">00 : 00 : 00 : 000</div>
+		<div class="display"> <span id="dlpsecond">00</span>:<span id="dlpmillisec">00</span></div>
 
 		<div class="control">
 
